--- a/templates/hello.html
+++ b/templates/hello.html
@@ -2,11 +2,18 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>SmartNinja basic Jinja template</title>
+    <title>Izracun starosti</title>
 
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-    <h1>Hello, SmartNinja!</h1>
+    <h1>Stari, star si:</h1>
+    <div>
+        <ul>
+            <li>{{ let }}</li>
+            <li>{{ mesec }}</li>
+            <li>{{ dni }}</li>
+        </ul>
+    </div>
 </body>
 </html>
