--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <title>Izracun starosti</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-    <h1>Stari, star si:</h1>
+
     <div>
+        <h1>Stari, star si:</h1>
         <ul>
-            <li>{{ let }}</li>
-            <li>{{ mesec }}</li>
-            <li>{{ dni }}</li>
+            <li>Star si:</li>
+            <li>{{ let }} let</li>
+            <li>{{ mesec }} mesecev</li>
+            <li>{{ dni }} dni</li>
+            <li>{{ ur }} ur</li>
+            <li>{{ minut }} minut</li>
         </ul>
     </div>
 </body>
