--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,7 +5,8 @@
     <title>Izracun starosti</title>
 
     <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="http://domain.tld/mobile.css" type="text/css" media="handheld" />
+    <link rel="stylesheet" href="../assets/css/style_mobile.css" type="text/css" media="handheld" />
+    <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="../assets/css/style_mobile.css" />
 </head>
 <body>
 
