--- a/templates/timelist.html
+++ b/templates/timelist.html
@@ -21,7 +21,7 @@
     </div>
     <dl>
       {% for item in stevilke.items() %}
-            <dt>{{item.0}} is the key for the value {{ item.1 }}</dt>
+            <dt>{{item.0}} ima rojstni dan čez {{ item.1 }} dni</dt>
             <dt></dt>
 
       {% endfor %}
